# Alice

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  alice-dev.out  erros.md  eslint.config.js  index.html  melhorias.md  package-lock.json  package.json  plano  skills-lock.json  start-alice.ps1  tauri-alice-run.log.stderr  vite.config.js
.gemini/: ecc-install-state.json
alice-core/: Cargo.toml
docs/: AI_HANDOFF.md  autonomous-runner-dev-harness.md  autonomous-runner-hardening-checklist.md  handoff-2026-05-01-learning.md  (+2 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/python_sidecar/: alice_window_sidecar.py  main.py
src-tauri/python_sidecar/tests/: test_sidecar.py
src-tauri/src/: actions.rs  alice_memory_store.rs  apps.rs  autonomous_playground.rs  gemini_live_access.rs  host_versioning.rs  legacy_desktop_commands.rs  lib.rs  lib.rs.bak  local_vm.rs  python_sidecar.rs  vm_visual.rs  web_knowledge.rs  web_knowledge_matcher.rs  windows_input.rs
src-tauri/src/commands/: README.md
src-tauri/src/runtime/: README.md
src-tauri/src/security/: README.md
src-tauri/tests/fixtures/web_knowledge/: long_article.html  noisy_navigation_links.html  selected_text_page.html  tables_and_lists.html  technical_docs.html  thin_landing_page.html
src-tauri/vm/guest_agent/: action_executor.py  agent.py  background_runner.py  element_recognition.py  input_controller.py  ocr.py  protocol.py  screen_capture.py  server.py  validation.py  visual_context.py
src-tauri/vm/guest_agent/tests/: test_background_actions.py  test_input_controller.py  test_resident_server.py
(+258 files in other folders)
