[package]
name = "alice-desktop"
version = "0.1.0"
description = "Alice Virtual desktop app"
authors = ["FaustinoAFK"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[features]
default = []
desktop-commands = []

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.22"
log = "0.4"
tauri = { version = "2.10.3", features = [] }
tokio = { version = "1", features = ["rt", "time", "macros"] }
tauri-plugin-log = "2"
urlencoding = "2"
wait-timeout = "0.2"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
scraper = "0.24"
tiny_http = "0.12"
url = "2.5"
windows-sys = { version = "0.61.2", features = ["Win32_Foundation", "Win32_Graphics_Gdi", "Win32_UI_Input_KeyboardAndMouse", "Win32_UI_WindowsAndMessaging"] }
